--- a/Evidencia 2/index.html
+++ b/Evidencia 2/index.html
@@ -3,30 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="wnameth=device-wnameth, initial-scale=1.0">
     <title>Logica proposicional</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;1,100;1,400&display=swap" rel="stylesheet">
     <script src="main.js"></script>
 </head>
 <body>
-    
     <p>Teniendo en cuenta los conceptos desarrollados durante el componente formativo, construir un documento donde
-    se dé solución a los siguientes problemas de lógica proposicional registrando cada uno de los pasos elaborados
-    para llegar a la solución</p>
-    <br>
+        se dé solución a los siguientes problemas de lógica proposicional registrando cada uno de los pasos elaborados
+        para llegar a la solución: </p>
     <form id="form">
-        <p>Según el operador OR la siguiente expresion da como resultado un valor True or False</p>
         <p>(2 * 5) < 8 OR ((4 * 6) > (2 * 5) )</p>
-        <input type="text" name="first" required>
-        <input type="submit"><br>
-        <span id="resultado"></span>
+        <input type="text" name="first">
+        <input type="submit" value="validar">
+        <p id="resultado"></p>
     </form>
     <form id="form2">
         <p>(4+ 5) < 3 AND ( ( 5 * 5 ) + (4 + 25 < 3) )</p>
-        <input type="text" name="sec" required>
-        <input type="submit" name="submit"><br>
-        <span id="resultado1"></span>
-    </form> 
+        <input type="text" name="sec">
+        <input type="submit" value="validar">
+        <p id="resultado1"></p>
+    </form>
 </body>
 </html>
